# pomodoso

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-044e352616f0c156add5be98eb1641687f5a64ed00ae5197b3bc06ebe6bb3447.json  query-064293730e548202b8465b87cb2cb4ee141f212225509d9ad63b746424385ac6.json  query-0696c8ddb00d23f3443c460965a0fec930761f5894ec51c8eaf2461754b4fc94.json  query-0be8f703f02ff18af179d0c47621e88297999a1cdb5903e328dc9e931eed467b.json  query-0f8a48fb4632180e09290ed4337ba878b611d1fb1a06e06bb00065391ef877bb.json  query-12705e9b7198d1c3d9c21308b6c6b1d8918d10d43cc2fbb56bd8da2c61c4bf23.json  query-1499c4d1df858912982840c56b9e8c2000977ee59f311d3fc6f3fca052efb8f2.json  query-24a81360ecce8ca033c8fbe4e8c3d4984c28313e50cdd751cd2ab46947249d9c.json  query-2c007ae48776589426d5204ffeb9b211b4e0e40d3d2624a7e1661403719c4e53.json  query-2d1c5cde30023a751b70111ea55f8827b0c902bbc7dc9e9d2093c0fe659e2bf9.json  query-302b8d42aa74e24dd5399f35be729d0cca4eba93dc9d86dcb3cf0d98c43fb2d1.json  query-380b9a5d6f3f3d296d3ae22cbbdbfe3aa4d22a4a07185573b86dabb7f7f17737.json  query-3c224c724a7a42fa5ce9609b6605564c6c45308c8ec73440db876c847a769275.json  query-3dcaa888c41177e33c1923cbad71236f2fbab8b43a16b3984171d23c593c9597.json  query-4e90c12927839f8490f1f52f4482193a72e31c052eeea719895ad8aedb43c0d0.json  query-5713132de39ae3aeb9e7fb213b927a777216727e73def733f6fffccaa81a4358.json  query-59ab9b50a2ad543af0e6dc6cbbcba163de976dc63807f0e86da23e193c3be722.json  (+68 more)
(+119 files in other folders)
