[package]
name = "pomodoso-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pomodoso-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "2"

dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
axum-test = "20"
